appId: "com.recipedia"
---
- tapOn:
    id: "RecipeValidation::ValidationQueue::Tag::SimilarityDialog::AddButton"
    label: "Add tag to recipe"

- runFlow:
    file: "../../../asserts/alerts/en/addingTag.yaml"
    label: "Check that adding modal appears"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Tag::ItemDialog::AddModal::Name::CustomTextInput"
    point: "95%,5%"
    label: "Focus on tag name input field"

- runFlow:
    file: "../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- inputText:
    text: "${EDIT_SUFFIX}"
    label: "Edit the tag name"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    file: "../../../flows/dismissModalKeyboard.yaml"
    label: "Dismiss modal keyboard (platform-specific)"

- runFlow:
    file: "../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to dismiss"

- assertVisible:
    id: "RecipeValidation::ValidationQueue::Tag::ItemDialog::AddModal::Name::CustomTextInput"
    text: ".*${EDIT_SUFFIX}"
    label: "Check that tag name was edited"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Tag::ItemDialog::AddModal::ConfirmButton"
    label: "Confirm adding the new tag"
