appId: "com.recipedia"
---
- repeat:
    while:
      visible:
        id: "${PREFIX}::ValidationQueue::Tag::SimilarityDialog::Title"
    commands:
      - tapOn:
          id: "RecipeImage::RoundButton"
          label: "Tap outside to dismiss tag dialog"

- repeat:
    while:
      visible:
        id: "${PREFIX}::ValidationQueue::Ingredient::SimilarityDialog::Title"
    commands:
      - tapOn:
          id: "RecipeImage::RoundButton"
          label: "Tap outside to dismiss ingredient dialog"

- extendedWaitUntil:
    notVisible:
      id: "${PREFIX}::ValidationQueue::Ingredient::SimilarityDialog::Title"
    timeout: 3000
    label: "Wait for all dialogs to be dismissed"
