appId: "com.recipedia"
---
- extendedWaitUntil:
    visible:
      id: "${PREFIX}::ValidationQueue::Ingredient::SimilarityDialog::Title"
    timeout: 10000
    label: "Wait for ingredient validation dialog"

- tapOn:
    id: "${PREFIX}::ValidationQueue::Ingredient::SimilarityDialog::AddButton"
    label: "Select to add the ingredient"

- extendedWaitUntil:
    visible:
      id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::Unit::CustomTextInput"
    timeout: 30000
    label: "Wait for add modal to be visible"

- tapOn:
    id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion"
    label: "Expand ingredient type accordion"

- extendedWaitUntil:
    visible:
      id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion::ingredientTypes.*"
    timeout: 5000
    label: "Wait for type accordion to be expanded"

- scrollUntilVisible:
    element:
      id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion::ingredientTypes.baking"
    direction: DOWN
    speed: 20
    timeout: 1200000
    centerElement: true
    label: "Action - Scroll to baking ingredient type"

- waitForAnimationToEnd:
    label: "Wait for scroll animation to finish"

- tapOn:
    id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion::ingredientTypes.baking"
    label: "Select Baking ingredient type"

- runFlow:
    file: "../../waitForCheckSettle.yaml"
    env:
      CHECK_TEXT: "radio button, checked"
    label: "Wait for item to settle after check (platform-specific)"

- scrollUntilVisible:
    element:
      id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion"
    direction: UP
    speed: 20
    label: "Action - Scroll up to ensure accordion is visible"

- waitForAnimationToEnd:
    label: "Wait for scroll animation to finish"

- tapOn:
    id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion"
    label: "Collapse ingredient type accordion"

- assertVisible:
    id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
    enabled: true
    label: "Confirm button should be enabled"

- tapOn:
    id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
    label: "Confirm adding the ingredient"

- extendedWaitUntil:
    notVisible:
      id: "${PREFIX}::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
    timeout: 10000
    label: "Wait for add ingredient dialog to close"
