appId: "com.recipedia"
---
- extendedWaitUntil:
    visible:
      id: "${PREFIX}::ValidationQueue::Tag::SimilarityDialog::Title"
    timeout: 10000
    label: "Wait for tag validation dialog"

- tapOn:
    id: "${PREFIX}::ValidationQueue::Tag::SimilarityDialog::AddButton"
    label: "Select to add the tag"

- tapOn:
    id: "${PREFIX}::ValidationQueue::Tag::ItemDialog::AddModal::ConfirmButton"
    label: "Confirm adding the tag"

- extendedWaitUntil:
    notVisible:
      id: "${PREFIX}::ValidationQueue::Tag::ItemDialog::AddModal::ConfirmButton"
    timeout: 10000
    label: "Wait for add tag dialog to close"
